# django-non-dark-admin

./: .gitignore  AUTHORS.rst  CHANGES.rst  LICENSE.rst  README.rst  pyproject.toml  setup.py
src/django_non_dark_admin/: conf.py
src/django_non_dark_admin/templates/admin/: base.html
src/django_non_dark_admin/templates/django_non_dark_admin/: darkmode_switch.html
src/django_non_dark_admin/templatetags/: admin_darkmode_switch.py
